Added formatting and CI format check Added additional e2e tests
